--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,4 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+MY_API_KEY="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"
